<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
    <EditText
        android:id="@+id/username1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/username"
        android:layout_margin="10dp"
        android:singleLine="true"
        />
    <EditText
        android:id="@+id/passwd1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/passwd"
        android:layout_margin="10dp"
        android:singleLine="true"/>
    <EditText
        android:id="@+id/repasswd1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/repasswd"
        android:layout_margin="10dp"
        android:singleLine="true"/>
    <Button
        android:id="@+id/btn3"
        android:text="@string/register"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:layout_gravity="center"/>
</LinearLayout>
