<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">


    <EditText
        android:id="@+id/username1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/username"
        android:singleLine="true"
        android:layout_margin="10dp"
 />

    <EditText
        android:id="@+id/password222"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="旧密码"
        android:inputType="textPassword"
        android:singleLine="true"
        android:layout_margin="10dp" />
    <EditText
        android:id="@+id/passwd1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/newpasswd"
        android:inputType="textPassword"
        android:singleLine="true"
        android:layout_margin="10dp"/>
    <EditText
        android:id="@+id/repasswd1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/newrepasswd"
        android:inputType="textPassword"
        android:layout_margin="10dp"
        android:singleLine="true"/>

    <Button
        android:id="@+id/btn6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/userset"
        android:layout_margin="10dp"
        android:layout_gravity="center"/>

    <Button
        android:id="@+id/btn7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/goback"
        android:layout_gravity="center"
        android:layout_margin="10dp" />
</LinearLayout>
